--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "spatie/laravel-short-schedule",
+    "name": "freewinds/laravel-short-schedule",
     "description": "Schedule artisan commands to run using a sub-minute frequency",
     "keywords": [
         "spatie",
@@ -16,7 +16,7 @@
         }
     ],
     "require": {
-        "php": "^7.4",
+        "php": "^7.4|^8.0",
         "illuminate/cache": "^7.0|^8.0",
         "react/event-loop": "^1.1",
         "spatie/temporary-directory": "^1.2"
@@ -26,7 +26,7 @@
         "orchestra/testbench": "^5.0",
         "phpunit/phpunit": "^9.0",
         "spatie/test-time": "^1.2",
-        "vimeo/psalm": "^3.11"
+        "vimeo/psalm": "^4.3"
     },
     "autoload": {
         "psr-4": {
