--- a/composer.json
+++ b/composer.json
@@ -16,17 +16,17 @@
         }
     ],
     "require": {
-        "php": "^7.4|^8.0",
-        "illuminate/cache": "^7.0|^8.0",
+        "php": "^8.0",
+        "ext-posix": "*",
+        "illuminate/cache": "^8.71|^9.0|^10",
         "react/event-loop": "^1.1",
-        "spatie/temporary-directory": "^1.2"
+        "spatie/temporary-directory": "^2.0"
     },
     "require-dev": {
-        "friendsofphp/php-cs-fixer": "^2.16",
-        "orchestra/testbench": "^5.0",
-        "phpunit/phpunit": "^9.0",
-        "spatie/test-time": "^1.2",
-        "vimeo/psalm": "^4.3"
+        "mockery/mockery": "^1.3.3",
+        "orchestra/testbench": "^6.23|^7.0|^8.0",
+        "phpunit/phpunit": "^9.4",
+        "spatie/test-time": "^1.2"
     },
     "autoload": {
         "psr-4": {
